<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cinemate</string>

    <!--Shared Preferences key-->
    <string name="pref_sort_key" translatable="false">sort_order</string>
    <string name="pref_changed_movie" translatable="false">changed_movie</string>

    <!--Menu item name for sorting spinner-->
    <string name="action_sort">Sorting</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>

    <!--For Sort Labels-->
    <string name="pref_sort_label_popular">Most Popular</string>
    <string name="pref_sort_label_highest_rated">Highest Rated</string>
    <string name="pref_sort_label_favorite">Favorites</string>

    <string name="cd_movie_item">Movie Poster</string>
    <string name="cd_video">Video</string>
    <string name="cd_favorite">Favorite</string>
    <string name="cd_status">Status</string>

    <string name="language">en-US</string>

    <!--For Detail Activity-->
    <string name="release_date">Release Date</string>
    <string name="user_rating">User Score</string>
    <string name="user_rating_text" translatable="false">%1$s / 10</string>
    <string name="plot_synopsis">Overview</string>
    <string name="videos">Videos</string>
    <string name="reviews">Reviews</string>
    <string name="review">Review</string>

    <string name="no_internet">No internet connection, swipe to refresh</string>
    <string name="no_favorite">You have no favorite movie. When you add a movie to favorites, you can find it here even if you don\'t have an internet.</string>
    <string name="not_this_star">Enter a movie, then click the star there :)</string>
    <string name="no_app">There is not any sharing app installed on device</string>

    <string name="add_favorite">Added to favorites</string>
    <string name="remove_favorite">Removed from favorites</string>

    <string name="connection_error">Connection Error</string>

    <!--For About Activity-->
    <string name="description">This product uses TMDb API.\nDeveloped by Ahmet Türk</string>

    <string name="movie_transition" translatable="false">movie_transition</string>
    <string name="review_transition" translatable="false">review_transition</string>
    <string name="action_search">Search</string>
    <string name="movie_menu">Movies - Lists</string>
    <string name="movie_genre">Movies - Genres</string>
    <string name="about">About</string>

    <!--For Movie List Activity-->
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="favorites">Favorites</string>

    <!--For Movie Genre Activity-->
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="tv_movie">TV Movie</string>
    <string name="thriller">Thriller</string>
    <string name="war">War</string>
    <string name="western">Western</string>
</resources>