<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movie_list"
            android:icon="@drawable/ic_movie"
            android:title="@string/movie_menu" />
        <item
            android:id="@+id/nav_movie_genre"
            android:icon="@drawable/ic_movie"
            android:title="@string/movie_genre" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites" />
    </group>

    <group>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline"
            android:title="@string/about" />
    </group>
</menu>