<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="movie"
            type="com.ahmetroid.popularmovies.model.Movie" />

        <variable
            name="presenter"
            type="com.ahmetroid.popularmovies.activity.DetailActivity" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="@dimen/poster_width"
            android:layout_height="@dimen/poster_height"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:contentDescription="@string/cd_movie_item"
            android:scaleType="centerCrop"
            android:transitionName="@string/movie_transition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/movieTitleTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="24dp"
            android:text="@{movie.movieTitle}"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/poster"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="The Maze Runner" />

        <ImageView
            android:id="@+id/releaseDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/release_date"
            app:layout_constraintStart_toStartOf="@+id/movieTitleTv"
            app:layout_constraintTop_toBottomOf="@+id/movieTitleTv"
            app:srcCompat="@drawable/ic_event_note_24dp" />

        <TextView
            android:id="@+id/releaseDateTv"
            style="@style/DetailText"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@{presenter.formatReleaseDate(movie.releaseDate)}"
            app:layout_constraintBottom_toTopOf="@+id/releaseDateLabel"
            app:layout_constraintStart_toEndOf="@+id/releaseDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/releaseDateLabel"
            tools:text="2014-09-10" />

        <ImageView
            android:id="@+id/userRatingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/user_rating"
            app:layout_constraintStart_toStartOf="@+id/movieTitleTv"
            app:layout_constraintTop_toBottomOf="@+id/releaseDateLabel"
            app:srcCompat="@drawable/ic_thumb_up_24dp" />

        <TextView
            android:id="@+id/userRatingTv"
            style="@style/DetailText"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@{@string/user_rating_text(movie.userRating)}"
            app:layout_constraintBottom_toTopOf="@+id/userRatingLabel"
            app:layout_constraintStart_toEndOf="@+id/userRatingLabel"
            app:layout_constraintTop_toBottomOf="@+id/userRatingLabel"
            tools:text="7/10" />

        <TextView
            android:id="@+id/plotSynopsisLabel"
            style="@style/DetailLabel"
            android:text="@string/plot_synopsis"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster" />

        <TextView
            android:id="@+id/plotSynopsisTv"
            style="@style/DetailText"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:text="@{movie.plotSynopsis.empty ? presenter.getEnglishPlotSynopsis(movie.movieId) : movie.plotSynopsis}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plotSynopsisLabel" />

    </android.support.constraint.ConstraintLayout>
</layout>